--- a/client/app/checkout/product_check/product_check.jade
+++ b/client/app/checkout/product_check/product_check.jade
@@ -1,18 +1,18 @@
 div.panel.panel-default
 	div.panel-body
-		table#checkout_cart_table.table.checkout-cart
-			tr.black.text-white
-				th.col-lg-6.col-md-6.col-sm-6.col-xs-6.text-center 商品名稱
-				th.col-lg-2.col-md-2.col-sm-2.col-xs-2 數量
-				th.col-lg-2.hidden-md.hidden-sm.hidden-xs 單價
-				th.col-lg-1.col-md-3.col-sm-3.col-xs-3 總價
-				th.col-lg-1.col-md-1.col-sm-1.col-xs-1
+		table#checkout_cart_table.table.checkout-cart.table-default
+			tr
+				th.col-md-6.col-xs-6.text-center 商品名稱
+				th.col-md-2.col-xs-2 數量
+				th.col-md-2.hidden-xs 單價
+				th.col-md-2.col-xs-3 總價
+				th.col-md-2.col-xs-1 刪除
 			tr(ng-repeat="product in cart.products")
 				td.cart-name
-					div.col-lg-6.col-md-6.col-sm-12.col-xs-12
+					div.col-md-4.col-xs-12
 						a(ng-href="{{product.href}}")
 							img.img-responsive(ng-attr-title="{{product.name}}", ng-src="{{product.thumb}}")
-					div.col-lg-6.col-md-6.col-sm-12.col-xs-12
+					div.col-md-8.col-xs-12
 						a(ng-href="{{product.href}}")
 							h5 {{product.name}}
 						h6(ng-repeat="option_product in product.option") {{option_product.value}}
@@ -32,7 +32,7 @@ div.panel.panel-default
 					div.visible-xs.text-green(ng-repeat="discount_condition in product.discount")
 						p(ng-hide="discount_condition.quantity <= product.quantity") 加{{discount_condition.quantity - product.quantity}}件，每件再折{{product.spot_price - discount_condition.price}}元
 				td.cart-remove
-					span.btn.btn-danger.btn-sm(ng-click="removeProduct(product.$$hashKey)")
+					span.btn.btn-default.btn-sm.text-center(ng-click="removeProduct(product.$$hashKey)")
 						span.glyphicon.glyphicon-trash
 		.row
 			.col-md-4.col-xs-6.col-md-offset-8.col-xs-offset-6
@@ -56,28 +56,32 @@ div#checkout_buymore.panel.panel-default(ng-hide="true")
 						p
 							label.btn.btn-sharp.btn-default(href="#", role="button", ng-click="addPromoteItem(product.key)") 加入購物車
 
-.page-header.h4 使用折扣，紅利，或禮品券
 div.panel.panel-default
 	div.panel-body
 		.row
-			.col-md-8.col-sm-12.col-xs-12
+			.col-md-6.col-xs-12
 				.form-group
-					label.col-md-4.control-label(for="input_coupon") 使用折扣碼
-					.col-md-8
+					label.col-md-4.col-xs-12.control-label(for="input_coupon") 使用折扣碼
+					.col-md-6.col-xs-8
 						input.form-control(id="input_coupon", name="input_coupon", ng-model="discount_temp.coupon_name", type='text', aria-label="...", placeholder='我要使用折扣碼', ng-change="cart.discount.coupon.saved_amount = 0")
+					.col-md-2.col-xs-4
+						button.form-control.btn.btn-success(ng-click="calcPriceSaved()", ng-disabled="checkout_form.input_rewards.$error.max") 確認
 				.form-group
-					label.col-md-4.control-label(for="input_rewards") 使用紅利點數折抵
-					.col-md-8
-						input.form-control(name="input_rewards", id="input_rewards",  ng-model="discount_temp.reward_points", type='number', aria-label="...", ng-change="cart.discount.reward.saved_amount = 0", placeholder='我要使用紅利點數，可使用{{(cart.product_total_price - cart.discount.coupon.saved_amount > rewards_customer_has_pts) ? rewards_customer_has_pts : cart.product_total_price - cart.discount.coupon.saved_amount}}點', max="{{(cart.product_total_price - cart.discount.coupon.saved_amount > rewards_customer_has_pts) ? rewards_customer_has_pts : cart.product_total_price - cart.discount.coupon.saved_amount}}", min="0")
-					div.help-block(ng-messages="checkout-form.input_rewards.$error", ng-show="checkout-form.input_rewards.$error.max")
+					label.col-md-4.col-xs-12.control-label(for="input_rewards") 使用紅利點數折抵
+					.col-md-6.col-xs-8
+						input.form-control(name="input_rewards", id="input_rewards",  ng-model="discount_temp.reward_points", type='number', aria-label="...", ng-change="cart.discount.reward.saved_amount = 0", placeholder='可使用{{(cart.product_total_price - cart.discount.coupon.saved_amount > rewards_customer_has_pts) ? rewards_customer_has_pts : cart.product_total_price - cart.discount.coupon.saved_amount}}點', max="{{(cart.product_total_price - cart.discount.coupon.saved_amount > rewards_customer_has_pts) ? rewards_customer_has_pts : cart.product_total_price - cart.discount.coupon.saved_amount}}", min="0")
+					.col-md-2.col-xs-4
+						button.form-control.btn.btn-success(ng-click="calcPriceSaved()", ng-disabled="checkout_form.input_rewards.$error.max") 確認
+					div.help-block(ng-messages="checkout_form.input_rewards.$error", ng-show="checkout_form.input_rewards.$error.max")
 						p(ng-message="max") 您最多只能使用{{(cart.product_total_price - cart.discount.coupon > rewards_customer_has_pts) ? rewards_customer_has_pts : cart.product_total_price - cart.discount.coupon}}點紅利
 				.form-group
-					label.col-md-4.control-label(for="input_voucher") 使用禮品券
-					.col-md-8
+					label.col-md-4.col-xs-12.control-label(for="input_voucher") 使用禮品券
+					.col-md-6.col-xs-8
 						input.form-control(id="input_voucher", name="input_voucher", ng-model="discount_temp.voucher_name", type='text', ng-change="cart.discount.voucher.saved_amount = 0")
-				.form-group
-					.col-md-8.col-md-offset-4
-						button.form-control.btn.btn-success.btn-sharp(ng-click="calcPriceSaved()", ng-disabled="checkout-form.input_rewards.$error.max") 更新價格
+					.col-md-2.col-xs-4
+						button.form-control.btn.btn-success(ng-click="calcPriceSaved()", ng-disabled="checkout_form.input_rewards.$error.max") 確認
+			.col-md-2.hidden-xs
+				img.img-responsive(src="../assets/images/checkout/freeship.png", style="width:100%")
 			.col-md-4.pull-right.hidden-xs
 				table.table
 					tr
@@ -96,9 +100,11 @@ div.panel.panel-default
 						td.text-right 總計
 						td.text-right $ {{cart.product_total_price - cart.discount.reward.saved_amount - cart.discount.coupon.saved_amount - cart.discount.voucher.saved_amount}}
 
-div.panel.panel-default.visible-xs
-	div.panel-body
-		.row
+div.visible-xs
+	.row
+		.col-xs-5
+			img.img-responsive(src="../assets/images/checkout/freeship.png", style="width:100%")
+		.col-xs-7
 			table.table
 				tr
 					td.text-right 商品總計:
@@ -116,6 +122,7 @@ div.panel.panel-default.visible-xs
 					td.text-right 小計
 					td.text-right $ {{cart.product_total_price - cart.discount.reward.saved_amount - cart.discount.coupon.saved_amount - cart.discount.voucher.saved_amount}}
 div.row.panel.panel-body
-	button.col-md-3.col-xs-6.btn.btn-default.btn-sharp.btn-lg.text-justify(href="vecsgardenia.com/?route=checkout/cart") 繼續購物
-	button.col-md-3.col-xs-6.btn.btn-success.btn-sharp.btn-lg.pull-right.text-justify(ui-sref="checkout.shipment_payment") 選擇配送方式
-		span.glyphicon.glyphicon-circle-arrow-right
+	button.col-md-3.col-xs-4.btn.btn-default.btn-sharp.btn-lg.text-justify(href="vecsgardenia.com/?route=checkout/cart") 繼續購物
+	button.col-md-3.col-xs-7.btn.btn-default.btn-sharp.btn-lg.pull-right.text-justify(ng-click="checkout_second_step()") 下一步
+		span.glyphicon.glyphicon-circle-arrow-right.pull-right
+.well {{shipping_info}}
