--- a/client/app/checkout/checkout.scss
+++ b/client/app/checkout/checkout.scss
@@ -29,6 +29,12 @@
   border-top: 1px solid #E5E5E5;
 }
 
+
+
+.well {
+  background-color: white;
+}
+
 .well-focus {
   @extend .well;
   background-color: green;
@@ -48,10 +54,17 @@ a {
   }
 }
 
+.table-default > tbody > tr > th {
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+}
+
 .black {
   background-color: black;
 }
-
+.border-block {
+  border: 1px solid #000000;
+}
 .text-white {
   color: white;
 }
@@ -105,11 +118,61 @@ a {
   padding: 5px;
 }
 
+/* FORM VALIDATION STYLINGS
+============================================================================= */
+input.ng-dirty.ng-invalid {
+  border-color: #a94442;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+  &:focus {
+    border-color: #843534;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #ce8483;
+            box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #ce8483;
+  }
+}
 
+input.ng-touched.ng-valid, select.ng-touched.ng-valid {
+  border-color: #abc07c;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+  &:focus {
+    border-color: #abc07c;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #c5d4a2;
+            box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #c5d4a2;
+  }
+}
 
+.form-group.required .control-label:after { 
+   content:"*";
+   color:red;
+}
 /* BASIC STYLINGS
 ============================================================================= */
-
+.btn-circle {
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.428571429;
+  border-radius: 15px;
+}
+.btn-circle.btn-lg {
+  width: 50px;
+  height: 50px;
+  padding: 10px 16px;
+  font-size: 18px;
+  line-height: 1.33;
+  border-radius: 25px;
+}
+.btn-circle.btn-xl {
+  width: 70px;
+  height: 70px;
+  padding: 10px 16px;
+  font-size: 24px;
+  line-height: 1.33;
+  border-radius: 35px;
+}
 /* form styling */
 #form-container                { background:white; margin-bottom:20px;
     border-radius:5px; }
@@ -117,14 +180,14 @@ a {
     border-top-left-radius:5px; border-top-right-radius:5px; color:white}
 
 /* numbered buttons */
-#status-buttons                 {  }
-#status-buttons a               { display:inline-block; font-size:12px; margin-right:10px; text-align:center; text-transform:uppercase; text-decoration:none;}
+#status-buttons                 { padding: 20px 0px 20px 0px;}
+#status-buttons a               { display:inline-block; text-transform:uppercase; text-decoration:none;}
 #status-buttons a:hover         { text-decoration:none; }
-#status-buttons span            { color:white; background:#080808; display:block; height:30px; margin:0 auto 10px; padding-top:5px; width:30px; 
-    border-radius:50%; }
 
-/* active buttons */
-#status-buttons a.active span   { background:#00BC8C; }
+/* numbered button in circle */
+#status-buttons .in-circle      { color:white; background:#d5e3e0; display:block; height:80px; margin:0 auto 10px; padding-top:10px; width:80px; 
+    border-radius:50%; text-align: center;}
+#status-buttons a.active .in-circle   { background:#84ccc9; }
 
 /* ANIMATION STYLINGS
 ============================================================================= */
