--- a/client/app/checkout/shipment_payment/shipment_payment.jade
+++ b/client/app/checkout/shipment_payment/shipment_payment.jade
@@ -1,25 +1,33 @@
-.page-header.h4 選擇配送方式
+.page-header.h4
+	img(src="../assets/images/checkout/logo_leaf.png", style="width:40px")
+	| 選擇配送方式
 	small(type="button", ng-show="shipping_info.shipment_sel_str") {{shipping_info.shipment_sel_str}} (運費 +{{cart.shipment_fee}}元)
 div
 	div.btn-group-seperated.btn-group-lg
 		label.btn.btn-default(ng-model="shipping_info.shipment_sel_str", uib-btn-radio="SHIPPING_NAME.ship_to_home", ng-click="setPaymentMethod(SHIPPING_NAME.ship_to_home)") 
-			div.col-lg-12.col-md-12.hidden-sm.hidden-xs {{SHIPPING_NAME.ship_to_home}}
+			div.col-md-12.hidden-xs {{SHIPPING_NAME.ship_to_home}}
 				span  
-				img(src='../assets/images/shipToHome.jpg')
+				img(src='../assets/images/checkout/house.png', style="height:40px")
 			.row
-				div.hidden-lg.hidden-md.col-sm-12.col-xs-12 {{SHIPPING_NAME.ship_to_home}}
-				div.hidden-lg.hidden-md.col-sm-12.col-xs-12
-					img.img-responsive(src='../assets/images/shipToHome.jpg')
+				div.visible-xs.col-xs-12 {{SHIPPING_NAME.ship_to_home}}
+				div.visible-xs.col-xs-12
+					img.img-responsive.center-block(src='../assets/images/checkout/house.png', style="height:40px")
 		label.btn.btn-default(ng-model="shipping_info.shipment_sel_str", uib-btn-radio="SHIPPING_NAME.ship_to_store", ng-click="setPaymentMethod(SHIPPING_NAME.ship_to_store)") 
-			div.col-lg-12.col-md-12.hidden-sm.hidden-xs {{SHIPPING_NAME.ship_to_store}}
+			div.col-md-12.hidden-xs {{SHIPPING_NAME.ship_to_store}}
 				span  
-				img(src='../assets/images/storePic.png')
+				img(src='../assets/images/storePic.png', style="height:40px")
 			.row
-				div.hidden-lg.hidden-md.col-sm-12.col-xs-12 {{SHIPPING_NAME.ship_to_store}}
-				div.hidden-lg.hidden-md.col-sm-12.col-xs-12
-					img.img-responsive(src='../assets/images/storePic.png')
+				div.visible-xs.col-xs-12 {{SHIPPING_NAME.ship_to_store}}
+				div.visible-xs.col-xs-12
+					img.img-responsive.center-block(src='../assets/images/storePic.png', style="height:40px")
 		label.btn.btn-default(ng-model="shipping_info.shipment_sel_str", uib-btn-radio="SHIPPING_NAME.ship_to_overseas", ng-click="setPaymentMethod(SHIPPING_NAME.ship_to_overseas)") 
-			div {{SHIPPING_NAME.ship_to_overseas}}
+			div.col-md-12.hidden-xs {{SHIPPING_NAME.ship_to_overseas}}
+				span  
+				img(src='../assets/images/checkout/airplane.png', style="height:40px")
+			.row
+				div.visible-xs.col-xs-12 {{SHIPPING_NAME.ship_to_overseas}}
+				div.visible-xs.col-xs-12
+					img.img-responsive.center-block(src='../assets/images/checkout/airplane.png', style="height:40px")
 	div.well(ng-show="shipping_info.shipment_sel_str == SHIPPING_NAME.ship_to_store")
 		.row
 			.col-sm-6.col-sm-offset-3
@@ -30,84 +38,94 @@ div
 						strong {{ezship_store_info.stAddr}}
 				.row
 					button.btn.btn-default.form-control(ng-click="setEzshipStore()") {{store_select_text}}
+				.row
+					li.text-center 
+						small 當商品送達您指定之全家或萊爾富門市時，將會發送簡訊到店通知。
 	div.well(ng-show="shipping_info.shipment_sel_str == SHIPPING_NAME.ship_to_overseas")
-		ul
+		ul.small
 			li 港澳，新加坡，馬來西亞一律 350元 ， 費用不包含保險，滿5000元可享免運
 			li 中國，韓國，日本，澳洲，紐西蘭，加拿大，美國，英國一律550元，費用不包含保險，滿6000元可享免運
 			li 其他地區請來信至 customer@vecsgardenia.com
 
-.page-header.h4 選擇付款方式
+.page-header.h4 
+	img(src="../assets/images/checkout/logo_leaf.png", style="width:40px")
+	| 選擇付款方式
 	small(type="button", ng-show="shipping_info.payment_sel_str") {{shipping_info.payment_sel_str}}
 div.row
 	.col-xs-12
-		label.btn.btn-default.col-xs-4(ng-model="shipping_info.payment_sel_str", uib-btn-radio="PAYMENT_NAME.credit_pay", ng-show="payment_btn.credit_pay") {{PAYMENT_NAME.credit_pay}}
-		label.btn.btn-default.col-xs-4(ng-model="shipping_info.payment_sel_str", uib-btn-radio="PAYMENT_NAME.hand_pay", ng-show="payment_btn.hand_pay") {{PAYMENT_NAME.hand_pay}}
-		label.btn.btn-default.col-xs-4(ng-model="shipping_info.payment_sel_str", uib-btn-radio="PAYMENT_NAME.store_pay", ng-show="payment_btn.store_pay") {{PAYMENT_NAME.store_pay}}
+		div.col-xs-4(ng-show="payment_btn.credit_pay")
+			.row
+				label.btn.btn-default.col-xs-12(ng-model="shipping_info.payment_sel_str", uib-btn-radio="PAYMENT_NAME.credit_pay") {{PAYMENT_NAME.credit_pay}}
+		div.col-xs-4(ng-show="payment_btn.hand_pay")
+			.row
+				label.btn.btn-default.col-xs-12(ng-model="shipping_info.payment_sel_str", uib-btn-radio="PAYMENT_NAME.hand_pay") {{PAYMENT_NAME.hand_pay}}
+		div.col-xs-4(ng-show="payment_btn.store_pay")
+			.row		
+				label.btn.btn-default.col-xs-12(ng-model="shipping_info.payment_sel_str", uib-btn-radio="PAYMENT_NAME.store_pay") {{PAYMENT_NAME.store_pay}}
+			.row.text-center.small
+				li 若訂購金額高於NTD6000，無法提供此項服務：若兩次未取，之後恕不提供此項服務，請另選擇信用卡付款方式。
 
 
-div.page-header.h4 收件人資料
+div.page-header.h4 
+	img(src="../assets/images/checkout/logo_leaf.png", style="width:40px")
+	| 收件人資料
 	small {{shipping_info.firstname}} / {{shipping_info.telephone}}
 div.panel.panel-default
 	div.panel-body
-		div.form-group(ng-class="{'has-error': checkout-form.input_name.$touched && checkout-form.input_name.$invalid}")
-			label.col-lg-2.col-md-2.col-sm-2.col-xs-3.control-label.text-right(for='input_name') 姓名：
-			div.col-lg-4.col-md-4.col-sm-10.col-xs-9
+		div.form-group.required
+			label.col-sm-2.col-xs-3.control-label.text-right(for='input_name') 姓名
+			div.col-md-4.col-sm-10.col-xs-9
 				input.form-control(type='text', name='input_name', placeholder='請填寫真實姓名，以利寄送', ng-model="shipping_info.firstname", ng-minlength="2", required)
-				p.hidden-lg.hidden-md(ng-hide="checkout-form.input_name.$touched && checkout-form.input_name.$error") 請填寫真實姓名，以利寄送
-				div.help-block(ng-messages="checkout-form.input_name.$error", ng-show="checkout-form.input_name.$touched")
-					p(ng-message="minlength") 請填寫真實姓名，以利寄送 !!
-					p(ng-message="required") 姓名不可為空白喔 !!
-		div.form-group(ng-class="{'disabled': payment_btn.store_pay}")
-			label.col-lg-2.col-md-2.col-sm-2.col-xs-3.control-label.text-right(for='input_country') 地址：
-			.row.col-lg-4.col-md-4.col-sm-4.col-xs-9(ng-show="shipping_info.shipment_sel_str == SHIPPING_NAME.ship_to_overseas")
-				div.col-lg-6.col-md-6.col-sm-6.col-xs-6
+		div.form-group.required(ng-class="{'disabled': payment_btn.store_pay}")
+			label.col-sm-2.col-xs-3.control-label.text-right(for='input_country') 地址
+			.row.col-sm-4.col-xs-9(ng-show="shipping_info.shipment_sel_str == SHIPPING_NAME.ship_to_overseas")
+				div.col-sm-6.col-xs-6
 					select.form-control(ng-options="country.country_id as country.name for country in country_coll", ng-model="shipping_info.country_id", ng-change="setCities(shipping_info.country_id)", name="input_country")
 						option(value='') 國家
-				div.col-lg-6.col-md-6.col-sm-6.col-xs-6
-					select.form-control(ng-options="city.zone_id as city.name for city in city_coll", ng-model="shipping_info.city_id", ng-disabled="!with_city_ready", name="input_city")
+				div.col-sm-6.col-xs-6
+					select.form-control(ng-options="city.zone_id as city.name for city in city_coll", ng-model="shipping_info.city_id", ng-change="setCityName(shipping_info.city_id)", ng-disabled="!with_city_ready", name="input_city")
 						option(value='') 城市
-			.row.col-lg-4.col-md-4.col-sm-4.col-xs-9(ng-show="shipping_info.shipment_sel_str != SHIPPING_NAME.ship_to_overseas")
-				div.col-lg-6.col-md-6.col-sm-6.col-xs-6
+			.row.col-sm-4.col-xs-9(ng-show="shipping_info.shipment_sel_str != SHIPPING_NAME.ship_to_overseas")
+				div.col-sm-6.col-xs-6
 					select.form-control(ng-options="city.zone_id as city.name for city in city_coll", ng-model="shipping_info.city_id", ng-change="setDistricts(shipping_info.city_id)", ng-disabled="!with_city_ready", name="input_city2")
 						option(value='') 縣市
-				div.col-lg-6.col-md-6.col-sm-6.col-xs-6
-					select.form-control(ng-options="district.district_id as district.name for district in district_coll", ng-model="shipping_info.district_id", ng-disabled="!shipping_info.city_id && !with_district_ready", name="input_district")
+				div.col-sm-6.col-xs-6
+					select.form-control(ng-options="district.district_id as district.name for district in district_coll", ng-model="shipping_info.district_id", ng-disabled="!shipping_info.city_id && !with_district_ready", ng-change="setDistrictName(shipping_info.district_id)", name="input_district")
 						option(value='') 鄉鎮市區
-			div.col-lg-6.col-md-6.col-sm-6.col-xs-9.pull-right
+			div.col-sm-6.col-xs-9.pull-right
 				input.form-control(type='address', id='input_address', placeholder='您的地址', ng-model="shipping_info.address", name="input_address")
-		div.form-group
-			label.col-lg-2.col-md-2.col-sm-2.col-xs-3.control-label.text-right(for='input_phone') 行動電話：
-			div.col-lg-4.col-md-4.col-sm-10.col-xs-9(ng-class="{'has-error': checkout-form.input_phone.$touched && checkout-form.input_phone.$invalid}")
+		div.form-group.required
+			label.col-sm-2.col-xs-3.control-label.text-right(for='input_phone') 行動電話
+			div.col-md-4.col-sm-10.col-xs-9
 				input.form-control(type='tel', name='input_phone', ng-model="shipping_info.telephone", ng-minlength="10", required) 
-				div.help-block(ng-messages="checkout-form.input_phone.$error", ng-show="checkout-form.input_phone.$touched")
-					p(ng-message="minlength") 電話長度有誤 !!
-					p(ng-message="required") 行動電話不可為空白喔 !!
-			span.col-lg-6.col-md-6.hidden-sm.hidden-xs
 
-div.page-header.h4(ng-click="with_memo_collapsed = !with_memo_collapsed") 發票及備註資訊
+div.page-header.h4(ng-click="with_memo_collapsed = !with_memo_collapsed") 
+	img(src="../assets/images/checkout/logo_leaf.png", style="width:40px")
+	| 發票及備註資訊
 	small {{shipping_info.company_id}} / {{shipping_info.comment}}
 div.panel.panel-default(uib-collapse="with_memo_collapsed")
 	div.panel-body
 		div.form-group
-			label.col-lg-2.col-md-2.col-sm-2.col-xs-3.control-label.text-right(for='input_comp_id') 發票統編：
-			div.col-lg-4.col-md-4.col-sm-10.col-xs-9
-				input.form-control(ng-model="shipping_info.company_id", type='number', name='input_comp_id', placeholder='請填寫發票統編(8位數字)，選填')
-			span.col-lg-6.col-md-6.hidden-sm.hidden-xs
+			label.col-sm-2.col-xs-3.control-label.text-right(for='input_comp_id') 發票統編：
+			div.col-md-4.col-sm-10.col-xs-9
+				input.form-control(ng-model="shipping_info.company_id", type='number', name='input_comp_id', placeholder='請填寫發票統編(8位數字)，選填', ng-minlength="8", ng-maxlength="8")
+			span.col-md-6.hidden-sm.hidden-xs
 		div.form-group
-			label.col-lg-2.col-md-2.col-sm-2.col-xs-3.control-label.text-right(for='input_comp_name') 買受人：
-			div.col-lg-4.col-md-4.col-sm-10.col-xs-9
+			label.col-sm-2.col-xs-3.control-label.text-right(for='input_comp_name') 買受人：
+			div.col-md-4.col-sm-10.col-xs-9
 				input.form-control(ng-model="shipping_info.company_name", type='text', name='input_comp_name', placeholder='選填') 
-			span.col-lg-6.col-md-6.hidden-sm.hidden-xs
+			span.col-md-6.hidden-sm.hidden-xs
 							form.form-horizontal
 		div.form-group
-			label.col-lg-2.col-md-2.col-sm-2.col-xs-3.control-label.text-right(for='input_comment') 訂單備註：
-			div.col-lg-4.col-md-4.col-sm-10.col-xs-9
+			label.col-sm-2.col-xs-3.control-label.text-right(for='input_comment') 訂單備註：
+			div.col-md-4.col-sm-10.col-xs-9
 				input.form-control(ng-model="shipping_info.comment", type='textarea', name='input_comment', placeholder='選填') 
-			span.col-lg-6.col-md-6.hidden-sm.hidden-xs
-
-div.page-header.h4 總計
-div.panel.panel-default
-	div.panel-body
+			span.col-md-6.hidden-sm.hidden-xs
+.row(ng-hide="true;")
+	.col-md-3
+		div.page-header.h4 
+			img(src="../assets/images/checkout/logo_leaf.png", style="width:40px")
+			| 總計
 		table.table
 			tr
 				td.text-right 商品總計:
@@ -131,9 +149,10 @@ div.panel.panel-default
 	div.well {{shipping_info}}
 .row
 	div.panel.panel-body
-		button.col-md-3.col-xs-6.btn.btn-success.btn-sharp.btn-lg.pull-right.text-justify(ng-click="proceedCheckout()") 送出結帳
-			span.glyphicon.glyphicon-circle-arrow-right
-		button.btn.btn-default.btn-lg.btn-default.btn-sharp(ui-sref="checkout.product_check") 返回
+		button.col-md-3.col-xs-4.btn.btn-default.btn-sharp.btn-lg.text-justify(ng-click="checkout_first_step()") 上一步
+		button.col-md-3.col-xs-7.btn.btn-default.btn-sharp.btn-lg.pull-right.text-justify(ng-click="checkout_third_step()", ng-disabled="checkout_form.$invalid", ng-class="{'has-error': checkout_form.$invalid}") 下一步
+			span.glyphicon.glyphicon-circle-arrow-right.pull-right
 
 form(method="post", id="cathay_order_form", action="https://sslpayment.uwccb.com.tw/EPOSService/Payment/OrderInitial.aspx")
 	input(type='hidden', id='strRqXMLID', name='strRqXML', value='')
+.well {{shipping_info}}
