--- a/client/app/checkout/final_confirm/final_confirm.jade
+++ b/client/app/checkout/final_confirm/final_confirm.jade
@@ -84,33 +84,43 @@ div.panel.panel-default
 							| - $ {{cart.discount.voucher.saved_amount}}
 							br
 							small 尚餘 $ {{cart.discount.voucher.available_amount - cart.discount.voucher.saved_amount}}
+					tr
+						td.text-right 運費:
+						td.text-right $ {{cart.shipment_fee}}
 					tr.h2
 						td.text-right 總計
 						td.text-right $ {{cart.product_total_price - cart.discount.reward.saved_amount - cart.discount.coupon.saved_amount - cart.discount.voucher.saved_amount}}
 
 div.visible-xs
 	.row
-		.col-xs-5
-			img.img-responsive(src="../assets/images/checkout/freeship.png", style="width:100%")
-		.col-xs-7
+		//- .col-xs-5
+			//- img.img-responsive(src="../assets/images/checkout/freeship.png", style="width:100%")
+		.col-xs-12
 			table.table
 				tr
 					td.text-right 商品總計:
 					td.text-right $ {{cart.product_total_price}}
-				tr(style="color:green")
-					td.text-right 折扣:
-					td.text-right - $ {{cart.discount.reward.saved_amount + cart.discount.coupon.saved_amount}}
+				tr(style="color:green", ng-show="cart.discount.reward.saved_amount >0")
+					td.text-right 紅利折扣:
+					td.text-right - $ {{cart.discount.reward.saved_amount}}
+				tr(style="color:green", ng-show="cart.discount.coupon.saved_amount >0")
+					td.text-right 折扣碼
+						b {{cart.discount.coupon.name}}:
+					td.text-right - $ {{cart.discount.coupon.saved_amount}}
 				tr(ng-show="cart.discount.voucher.saved_amount > 0", style="color:green")
 					td.text-right 禮品券:
 					td.text-right 
 						| - $ {{cart.discount.voucher.saved_amount}}
 						br
 						small 尚餘 $ {{cart.discount.voucher.available_amount - cart.discount.voucher.saved_amount}}
+				tr
+					td.text-right 運費:
+					td.text-right $ {{cart.shipment_fee}}
 				tr.h2
-					td.text-right 小計
+					td.text-right 總計
 					td.text-right $ {{cart.product_total_price - cart.discount.reward.saved_amount - cart.discount.coupon.saved_amount - cart.discount.voucher.saved_amount}}
 div.row.panel.panel-body
 	button.col-md-3.col-xs-4.btn.btn-default.btn-sharp.btn-lg.text-justify(ng-click="checkout_second_step()") 上一步
-	button.col-md-3.col-xs-7.btn.btn-default.btn-sharp.btn-lg.pull-right.text-justify(ng-click="proceedCheckout()") 送出結帳
+	button.col-md-3.col-xs-7.btn.btn-default.btn-sharp.btn-lg.pull-right.text-justify(ng-click="proceedCheckout()", ng-disabled="checkout_form.$invalid") 送出結帳
 		span.glyphicon.glyphicon-circle-arrow-right.pull-right
-.well {{shipping_info}}
+//- .well {{shipping_info}}
