--- a/client/app/checkout/shipment_payment/shipment_payment.jade
+++ b/client/app/checkout/shipment_payment/shipment_payment.jade
@@ -4,23 +4,7 @@
 	small(type="button", ng-show="shipping_info.shipment_sel_str") {{shipping_info.shipment_sel_str}} (運費 +{{cart.shipment_fee}}元)
 div
 	div.btn-group-seperated.btn-group-lg
-		label.btn.btn-default(ng-model="shipping_info.shipment_sel_str", uib-btn-radio="SHIPPING_NAME.ship_to_home", ng-click="setPaymentMethod(SHIPPING_NAME.ship_to_home)") 
-			div.col-md-12.hidden-xs {{SHIPPING_NAME.ship_to_home}}
-				span  
-				img(src='../assets/images/checkout/house.png', style="height:40px")
-			.row
-				div.visible-xs.col-xs-12 {{SHIPPING_NAME.ship_to_home}}
-				div.visible-xs.col-xs-12
-					img.img-responsive.center-block(src='../assets/images/checkout/house.png', style="height:40px")
-		label.btn.btn-default(ng-model="shipping_info.shipment_sel_str", uib-btn-radio="SHIPPING_NAME.ship_to_store", ng-click="setPaymentMethod(SHIPPING_NAME.ship_to_store)") 
-			div.col-md-12.hidden-xs {{SHIPPING_NAME.ship_to_store}}
-				span  
-				img(src='../assets/images/storePic.png', style="height:40px")
-			.row
-				div.visible-xs.col-xs-12 {{SHIPPING_NAME.ship_to_store}}
-				div.visible-xs.col-xs-12
-					img.img-responsive.center-block(src='../assets/images/storePic.png', style="height:40px")
-		label.btn.btn-default(ng-model="shipping_info.shipment_sel_str", uib-btn-radio="SHIPPING_NAME.ship_to_overseas", ng-click="setPaymentMethod(SHIPPING_NAME.ship_to_overseas)") 
+		label.btn.btn-default.form-check(name="input_shipment", ng-model="shipping_info.shipment_sel_str", uib-btn-radio="SHIPPING_NAME.ship_to_overseas", ng-click="setPaymentMethod(SHIPPING_NAME.ship_to_overseas)", required) 
 			div.col-md-12.hidden-xs {{SHIPPING_NAME.ship_to_overseas}}
 				span  
 				img(src='../assets/images/checkout/airplane.png', style="height:40px")
@@ -28,6 +12,24 @@ div
 				div.visible-xs.col-xs-12 {{SHIPPING_NAME.ship_to_overseas}}
 				div.visible-xs.col-xs-12
 					img.img-responsive.center-block(src='../assets/images/checkout/airplane.png', style="height:40px")
+		label.btn.btn-default.form-check(name="input_shipment", ng-model="shipping_info.shipment_sel_str", uib-btn-radio="SHIPPING_NAME.ship_to_home", ng-click="setPaymentMethod(SHIPPING_NAME.ship_to_home)", required) 
+			div.col-md-12.hidden-xs {{SHIPPING_NAME.ship_to_home}}
+				span  
+				img(src='../assets/images/checkout/house.png', style="height:40px")
+			.row
+				div.visible-xs.col-xs-12 {{SHIPPING_NAME.ship_to_home}}
+				div.visible-xs.col-xs-12
+					img.img-responsive.center-block(src='../assets/images/checkout/house.png', style="height:40px")
+		label.btn.btn-default.form-check(name="input_shipment", ng-model="shipping_info.shipment_sel_str", uib-btn-radio="SHIPPING_NAME.ship_to_store", ng-click="setPaymentMethod(SHIPPING_NAME.ship_to_store)", required) 
+			div.col-md-12.hidden-xs {{SHIPPING_NAME.ship_to_store}}
+				span  
+				img(src='../assets/images/checkout/family.png', style="height:40px")
+				img(src='../assets/images/checkout/hilife.png', style="height:40px")
+				img(src='../assets/images/checkout/ok1.png', style="height:40px")
+			.row
+				div.visible-xs.col-xs-12 {{SHIPPING_NAME.ship_to_store}}
+				div.visible-xs.col-xs-12
+					img.img-responsive.center-block(src='../assets/images/checkout/family.png', style="height:40px")
 	div.well(ng-show="shipping_info.shipment_sel_str == SHIPPING_NAME.ship_to_store")
 		.row
 			.col-sm-6.col-sm-offset-3
@@ -37,12 +39,13 @@ div
 					p 地址為: 
 						strong {{ezship_store_info.stAddr}}
 				.row
-					button.btn.btn-default.form-control(ng-click="setEzshipStore()") {{store_select_text}}
+					button.btn.btn-default.form-control(ng-click="setEzshipStore()", ng-class="{'form-invalid': shipping_info.shipment_sel_str == SHIPPING_NAME.ship_to_store && !shipping_info.ezship_store_info}") {{store_select_text}}
 				.row
+					br
 					li.text-center 
-						small 當商品送達您指定之全家或萊爾富門市時，將會發送簡訊到店通知。
+						small.text-muted 當商品送達您指定之全家或萊爾富門市時，將會發送簡訊到店通知。
 	div.well(ng-show="shipping_info.shipment_sel_str == SHIPPING_NAME.ship_to_overseas")
-		ul.small
+		ul.small.text-muted
 			li 港澳，新加坡，馬來西亞一律 350元 ， 費用不包含保險，滿5000元可享免運
 			li 中國，韓國，日本，澳洲，紐西蘭，加拿大，美國，英國一律550元，費用不包含保險，滿6000元可享免運
 			li 其他地區請來信至 customer@vecsgardenia.com
@@ -55,14 +58,15 @@ div.row
 	.col-xs-12
 		div.col-xs-4(ng-show="payment_btn.credit_pay")
 			.row
-				label.btn.btn-default.col-xs-12(ng-model="shipping_info.payment_sel_str", uib-btn-radio="PAYMENT_NAME.credit_pay") {{PAYMENT_NAME.credit_pay}}
+				label.btn.btn-default.btn-lg.col-xs-12.form-check(name="input_payment", ng-model="shipping_info.payment_sel_str", uib-btn-radio="PAYMENT_NAME.credit_pay", required) {{PAYMENT_NAME.credit_pay}}
 		div.col-xs-4(ng-show="payment_btn.hand_pay")
 			.row
-				label.btn.btn-default.col-xs-12(ng-model="shipping_info.payment_sel_str", uib-btn-radio="PAYMENT_NAME.hand_pay") {{PAYMENT_NAME.hand_pay}}
+				label.btn.btn-default.btn-lg.col-xs-12.form-check(name="input_payment", ng-model="shipping_info.payment_sel_str", uib-btn-radio="PAYMENT_NAME.hand_pay", required) {{PAYMENT_NAME.hand_pay}}
 		div.col-xs-4(ng-show="payment_btn.store_pay")
-			.row		
-				label.btn.btn-default.col-xs-12(ng-model="shipping_info.payment_sel_str", uib-btn-radio="PAYMENT_NAME.store_pay") {{PAYMENT_NAME.store_pay}}
-			.row.text-center.small
+			.row
+				label.btn.btn-default.btn-lg.col-xs-12.form-check(name="input_payment", ng-model="shipping_info.payment_sel_str", uib-btn-radio="PAYMENT_NAME.store_pay", required) {{PAYMENT_NAME.store_pay}}
+			.row.text-center.small.text-muted
+				br
 				li 若訂購金額高於NTD6000，無法提供此項服務：若兩次未取，之後恕不提供此項服務，請另選擇信用卡付款方式。
 
 
@@ -145,14 +149,13 @@ div.panel.panel-default(uib-collapse="with_memo_collapsed")
 			tr.h2
 				td.text-right 總計
 				td.text-right $ {{cart.product_total_price + cart.shipment_fee - cart.discount.reward.saved_amount - cart.discount.coupon.saved_amount - cart.discount.voucher.saved_amount}}
-//- .row
-	div.well {{shipping_info}}
 .row
 	div.panel.panel-body
 		button.col-md-3.col-xs-4.btn.btn-default.btn-sharp.btn-lg.text-justify(ng-click="checkout_first_step()") 上一步
-		button.col-md-3.col-xs-7.btn.btn-default.btn-sharp.btn-lg.pull-right.text-justify(ng-click="checkout_third_step()", ng-disabled="checkout_form.$invalid", ng-class="{'has-error': checkout_form.$invalid}") 下一步
-			span.glyphicon.glyphicon-circle-arrow-right.pull-right
-
-form(method="post", id="cathay_order_form", action="https://sslpayment.uwccb.com.tw/EPOSService/Payment/OrderInitial.aspx")
-	input(type='hidden', id='strRqXMLID', name='strRqXML', value='')
-.well {{shipping_info}}
+		div.col-md-3.col-xs-7.pull-right
+			.row
+				button.col-xs-12.btn.btn-default.btn-sharp.btn-lg.text-justify(ng-click="checkout_third_step()", ng-disabled="checkout_form.$invalid", ng-class="{'btn-danger': checkout_form.$invalid}") 下一步
+					span.glyphicon.glyphicon-circle-arrow-right.pull-right
+			.row(ng-show="checkout_form.$invalid || !is_address_valid")
+				p.text-danger --請檢查以上填寫的送貨資料 
+//- .well {{shipping_info}}
