--- a/client/app/checkout/success/success.jade
+++ b/client/app/checkout/success/success.jade
@@ -4,7 +4,7 @@ div.jumbotron.text-center.text-white.hidden-xs(style="background-image: url('../
 	p (訂單編號：
 		b {{order.order_id}}
 		| )
-div.jumbotron.text-center.text-white.visible-xs(style="background-image: url('../assets/images/checkout/03_s.jpg'); background-size: auto 100%;")
+div.well.text-center.visible-xs
 	h2 謝謝您的購買
 	p 期待您開心收到商品
 	p (訂單編號：
