--- a/client/app/checkout/checkout.jade
+++ b/client/app/checkout/checkout.jade
@@ -1,10 +1,7 @@
-//- navbar
+navbar
 .container
 	.row
-		img.img-responsive.hidden-xs(src="../assets/images/checkout/checkout_banner.png")
-		img.img-responsive.visible-xs(src="../assets/images/checkout/checkout_banner_s.png")
-	.row
-		div.col-md-10.col-md-offset-1
+		div.col-xs-10.col-xs-offset-1
 			div#form-container
 				.row
 					div#status-buttons.text-center.col-md-8.col-md-offset-2
