--- a/client/app/checkout/product_check/product_check.jade
+++ b/client/app/checkout/product_check/product_check.jade
@@ -7,12 +7,12 @@ div.panel.panel-default
 				th.col-md-2.hidden-xs 單價
 				th.col-md-2.col-xs-3 總價
 				th.col-md-2.col-xs-1 刪除
-			tr(ng-repeat="product in cart.products")
+			tr(ng-repeat-start="product in cart.products")
 				td.cart-name
-					div.col-md-4.col-xs-12
+					div.col-md-4
 						a(ng-href="{{product.href}}")
 							img.img-responsive(ng-attr-title="{{product.name}}", ng-src="{{product.thumb}}")
-					div.col-md-8.col-xs-12
+					div.col-md-8.hidden-xs
 						a(ng-href="{{product.href}}")
 							h5 {{product.name}}
 						h6(ng-repeat="option_product in product.option") {{option_product.value}}
@@ -21,7 +21,6 @@ div.panel.panel-default
 					div.input-group(ng-show="!product.isLimited")
 						select(ng-options="option for option in allow_amount track by option", ng-model="product.quantity", ng-change="updateCartTotal(product.product_id)")
 					div.input-group(ng-show="product.isLimited") {{product.quantity}}
-
 				td.cart-price.hidden-md.hidden-sm.hidden-xs  
 					| $ {{product.spot_price + product.option_price}}
 					del.text-red(ng-show="product.price.unit_price > product.spot_price") 
@@ -34,6 +33,13 @@ div.panel.panel-default
 				td.cart-remove
 					span.btn.btn-default.btn-sm.text-center(ng-click="removeProduct(product.$$hashKey)")
 						span.glyphicon.glyphicon-trash
+			tr.visible-xs(ng-repeat-end)
+				td(colspan="4", style="border-top:0px solid black;")
+					div
+						a(ng-href="{{product.href}}")
+							h5 {{product.name}}
+						span(ng-repeat="option_product in product.option") {{option_product.value}}，
+						h6(ng-show="product.reward") + 紅利 {{product.reward}} 點  
 		.row
 			.col-md-4.col-xs-6.col-md-offset-8.col-xs-offset-6
 				table.table
@@ -62,23 +68,23 @@ div.panel.panel-default
 			.col-md-6.col-xs-12
 				.form-group
 					label.col-md-4.col-xs-12.control-label(for="input_coupon") 使用折扣碼
-					.col-md-6.col-xs-8
+					.col-md-5.col-xs-8
 						input.form-control(id="input_coupon", name="input_coupon", ng-model="discount_temp.coupon_name", type='text', aria-label="...", placeholder='我要使用折扣碼', ng-change="cart.discount.coupon.saved_amount = 0")
-					.col-md-2.col-xs-4
+					.col-md-3.col-xs-4
 						button.form-control.btn.btn-success(ng-click="calcPriceSaved()", ng-disabled="checkout_form.input_rewards.$error.max") 確認
 				.form-group
 					label.col-md-4.col-xs-12.control-label(for="input_rewards") 使用紅利點數折抵
-					.col-md-6.col-xs-8
+					.col-md-5.col-xs-8
 						input.form-control(name="input_rewards", id="input_rewards",  ng-model="discount_temp.reward_points", type='number', aria-label="...", ng-change="cart.discount.reward.saved_amount = 0", placeholder='可使用{{(cart.product_total_price - cart.discount.coupon.saved_amount > rewards_customer_has_pts) ? rewards_customer_has_pts : cart.product_total_price - cart.discount.coupon.saved_amount}}點', max="{{(cart.product_total_price - cart.discount.coupon.saved_amount > rewards_customer_has_pts) ? rewards_customer_has_pts : cart.product_total_price - cart.discount.coupon.saved_amount}}", min="0")
-					.col-md-2.col-xs-4
+					.col-md-3.col-xs-4
 						button.form-control.btn.btn-success(ng-click="calcPriceSaved()", ng-disabled="checkout_form.input_rewards.$error.max") 確認
 					div.help-block(ng-messages="checkout_form.input_rewards.$error", ng-show="checkout_form.input_rewards.$error.max")
 						p(ng-message="max") 您最多只能使用{{(cart.product_total_price - cart.discount.coupon > rewards_customer_has_pts) ? rewards_customer_has_pts : cart.product_total_price - cart.discount.coupon}}點紅利
 				.form-group
 					label.col-md-4.col-xs-12.control-label(for="input_voucher") 使用禮品券
-					.col-md-6.col-xs-8
+					.col-md-5.col-xs-8
 						input.form-control(id="input_voucher", name="input_voucher", ng-model="discount_temp.voucher_name", type='text', ng-change="cart.discount.voucher.saved_amount = 0")
-					.col-md-2.col-xs-4
+					.col-md-3.col-xs-4
 						button.form-control.btn.btn-success(ng-click="calcPriceSaved()", ng-disabled="checkout_form.input_rewards.$error.max") 確認
 			.col-md-2.hidden-xs
 				img.img-responsive(src="../assets/images/checkout/freeship.png", style="width:100%")
@@ -102,9 +108,9 @@ div.panel.panel-default
 
 div.visible-xs
 	.row
-		.col-xs-5
+		.col-xs-4
 			img.img-responsive(src="../assets/images/checkout/freeship.png", style="width:100%")
-		.col-xs-7
+		.col-xs-8
 			table.table
 				tr
 					td.text-right 商品總計:
@@ -122,7 +128,7 @@ div.visible-xs
 					td.text-right 小計
 					td.text-right $ {{cart.product_total_price - cart.discount.reward.saved_amount - cart.discount.coupon.saved_amount - cart.discount.voucher.saved_amount}}
 div.row.panel.panel-body
-	button.col-md-3.col-xs-4.btn.btn-default.btn-sharp.btn-lg.text-justify(href="vecsgardenia.com/?route=checkout/cart") 繼續購物
+	a.col-md-3.col-xs-4.btn.btn-default.btn-sharp.btn-lg.text-justify(href="//vecsgardenia.com/?route=checkout/cart") 繼續購物
 	button.col-md-3.col-xs-7.btn.btn-default.btn-sharp.btn-lg.pull-right.text-justify(ng-click="checkout_second_step()") 下一步
 		span.glyphicon.glyphicon-circle-arrow-right.pull-right
 //- .well {{shipping_info}}
