--- a/client/components/navbar/navbar.jade
+++ b/client/components/navbar/navbar.jade
@@ -1,22 +1,22 @@
 div.navbar.navbar-default.navbar-static-top(ng-controller='NavbarController')
   div.container
     div.navbar-header
-      button.navbar-toggle(type='button', ng-click='nav.isCollapsed = !nav.isCollapsed')
+      button.navbar-toggle-vecs.pull-left(type='button', ng-click='nav.isCollapsed = !nav.isCollapsed')
         span.sr-only Toggle navigation
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='/') 嘉丹妮爾
+      a.navbar-brand(href='https://vecsgardenia.com') 嘉丹妮爾
 
     div#navbar-main.navbar-collapse.collapse(uib-collapse='nav.isCollapsed')
-      ul.nav.navbar-nav
-        li(ng-repeat='item in nav.menu', ui-sref-active='active')
-          a(ui-sref='{{item.state}}') {{item.title}}
+      //- ul.nav.navbar-nav
+      //-   li(ng-repeat='item in nav.menu', ui-sref-active='active')
+      //-     a(ui-sref='{{item.state}}') {{item.title}}
 
-        li(ng-show='nav.isAdmin()', ui-sref-active='active')
-          a(ui-sref='admin') Admin
+      //-   li(ng-show='nav.isAdmin()', ui-sref-active='active')
+      //-     a(ui-sref='admin') Admin
 
-      ul.nav.navbar-nav.navbar-right
+      ul.nav.navbar-nav.navbar-right.small
         li(ng-hide='nav.isLoggedIn()', ui-sref-active='active')
           a(ui-sref='signup') Sign up
 
@@ -24,11 +24,23 @@ div.navbar.navbar-default.navbar-static-top(ng-controller='NavbarController')
           a(ui-sref='login') Login
 
         li(ng-show='nav.isLoggedIn()')
-          p.navbar-text 您好，{{ nav.getCurrentUser().firstname }}
+          a 您好，{{ nav.getCurrentUser().firstname }}
 
         li(ng-show='nav.isLoggedIn()', ui-sref-active='active')
-          a(ui-sref='settings')
-            span.glyphicon.glyphicon-cog
+          a(href="#") 會員中心
 
         li(ng-show='nav.isLoggedIn()')
-          a(ui-sref='logout') Logout
+          a(href="https://vecsgardenia.com.tw/index.php?route=account/logout") 登出
+.container
+  .row
+    a(href="https://vecsgardenia.com")
+      img.img-responsive.center-block.logo(src="../assets/images/checkout/vecslogoweb.jpg")
+  .row.hidden-xs
+    ul.nav.nav-tabs.nav-justified
+      li(role="navigation")
+        a(href="#") 所有商品
+          span.caret
+      li(role="navigation")
+        a(href="#") 莞婷的親身推薦
+      li(role="navigation")
+        a(href="#") VECS 小教室
