--- a/client/app/checkout/shipment_payment/shipment_payment.jade
+++ b/client/app/checkout/shipment_payment/shipment_payment.jade
@@ -109,25 +109,21 @@ div.panel.panel-default
 
 div.page-header.h4(ng-click="with_memo_collapsed = !with_memo_collapsed") 
 	img(src="../assets/images/checkout/logo_leaf.png", style="width:40px")
-	| 發票及備註資訊
-div.panel.panel-default(uib-collapse="with_memo_collapsed")
+	| 發票及備註資訊(選填)
+div.panel.panel-default
 	div.panel-body
-		div.form-group
-			label.col-sm-2.col-xs-4.control-label.text-right(for='input_comp_id') 發票統編：
-			div.col-md-4.col-sm-10.col-xs-8
-				input.form-control(ng-model="shipping_info.company_id", type='number', name='input_comp_id', placeholder='請填寫發票統編(8位數字)，選填', ng-minlength="8", ng-maxlength="8")
-			span.col-md-6.hidden-sm.hidden-xs
-		div.form-group
-			label.col-sm-2.col-xs-4.control-label.text-right(for='input_comp_name') 買受人：
-			div.col-md-4.col-sm-10.col-xs-8
-				input.form-control(ng-model="shipping_info.company_name", type='text', name='input_comp_name', placeholder='選填') 
-			span.col-md-6.hidden-sm.hidden-xs
-							form.form-horizontal
 		div.form-group
 			label.col-sm-2.col-xs-4.control-label.text-right(for='input_comment') 訂單備註：
 			div.col-md-4.col-sm-10.col-xs-8
 				input.form-control(ng-model="shipping_info.comment", type='textarea', name='input_comment', placeholder='選填') 
-			span.col-md-6.hidden-sm.hidden-xs
+		div.form-group
+			label.col-sm-2.col-xs-4.control-label.text-right(for='input_comp_id') 發票統編：
+			div.col-md-4.col-sm-10.col-xs-8
+				input.form-control(ng-model="shipping_info.company_id", type='number', name='input_comp_id', placeholder='請填寫發票統編(8位數字)，選填', ng-minlength="8", ng-maxlength="8")
+		div.form-group
+			label.col-sm-2.col-xs-4.control-label.text-right(for='input_comp_name') 買受人：
+			div.col-md-4.col-sm-10.col-xs-8
+				input.form-control(ng-model="shipping_info.company_name", type='text', name='input_comp_name', placeholder='選填') 
 .row(ng-hide="true;")
 	.col-md-3
 		div.page-header.h4 
