--- a/client/components/navbar/navbar.jade
+++ b/client/components/navbar/navbar.jade
@@ -6,7 +6,7 @@ div.navbar.navbar-default.navbar-static-top(ng-controller='NavbarController')
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand.hidden-xs(href='https://vecsgardenia.com.tw') 嘉丹妮爾
+      a.navbar-brand.hidden-xs(href='https://vecsgardenia.com') 嘉丹妮爾
 
     div#navbar-main.navbar-collapse.collapse(uib-collapse='nav.isCollapsed')
       //- ul.nav.navbar-nav
@@ -27,30 +27,25 @@ div.navbar.navbar-default.navbar-static-top(ng-controller='NavbarController')
           a 您好，{{ nav.getCurrentUser().firstname }}
 
         li(ng-show='nav.isLoggedIn()', ui-sref-active='active')
-          a(href="https://vecsgardenia.com.tw/index.php?route=account/account") 會員中心
+          a(href="https://vecsgardenia.com/index.php?route=account/account") 會員中心
 
         li(ng-show='nav.isLoggedIn()')
-          a(href="https://vecsgardenia.com.tw/index.php?route=account/logout") 登出
+          a(href="https://vecsgardenia.com/index.php?route=account/logout") 登出
         
         li.visible-xs(role="navigation")
-          a(href="https://vecsgardenia.com.tw/") 所有商品
+          a(href="https://vecsgardenia.com/") 所有商品
             span.caret
         
         li.visible-xs(role="navigation")
-          a(href="https://vecsgardenia.com.tw/ourStars") 莞婷的親身推薦
-        
-        li.visible-xs(role="navigation")
-          a(href="http://blog.vecsgardenia.com.tw/") VECS 小教室
+          a(href="http://blog.vecsgardenia.com/") VECS 小教室
 .container
   .row
-    a(href="https://vecsgardenia.com.tw")
+    a(href="https://vecsgardenia.com")
       img.img-responsive.center-block.logo(src="../assets/images/checkout/vecslogoweb.jpg")
   .row.hidden-xs
     ul.nav.nav-tabs.nav-justified
       li(role="navigation")
-        a(href="https://vecsgardenia.com.tw/") 所有商品
-          span.caret
+        a(href="https://vecsgardenia.com/") 所有商品
+          //- span.caret
       li(role="navigation")
-        a(href="https://vecsgardenia.com.tw/ourStars") 莞婷的親身推薦
-      li(role="navigation")
-        a(href="http://blog.vecsgardenia.com.tw/") VECS 小教室
+        a(href="http://blog.vecsgardenia.com/") VECS 小教室
